# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.415 2005/12/02 15:21:05 rocket Exp $

  02 Dec 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/livecdfs-update.sh:
  remove gnap livecd-type per Koon's request

  02 Dec 2005; Eric Edgar <rocket@gentoo.org> targets/support/rc-update.sh:
  change rc-update add modules default to rc-update add modules boot

  02 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/grp_target.py:
  Add more verbosity to digests if -V is enabled, add more print messages to
  grp digesting code

  02 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/catalyst_support.py,
  modules/generic_stage_target.py, modules/grp_target.py:
  Add sha/md5 digests support for grp and cleanup other sha/md5 code

  01 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  Fix folder name for grp build dir to not have .tar.bz2 at the end

  01 Dec 2005; Eric Edgar <rocket@gentoo.org> catalyst, files/catalyst.conf,
  modules/catalyst_support.py, modules/generic_stage_target.py:
  Add md5 and sha .digests file creation per wolf31o2's feature request

  30 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst-2.0_rc2.

  30 Nov 2005; Eric Edgar <rocket@gentoo.org> examples/stage4_template.spec,
  files/catalyst.conf, modules/generic_stage_target.py,
  modules/livecd_stage1_target.py:
  Fix livecd-stage1 livecd use flag bug; stage4 doc cleanups;autoresume points
  after each successful kernel build;add autoresume documentation to
  catalyst.conf

  30 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py,
  targets/embedded/embedded-controller.sh,
  targets/embedded/embedded-fs-runscript.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/netboot/netboot-combine.sh, targets/netboot/netboot-controller.sh,
  targets/stage1/stage1-chroot.sh, targets/stage4/stage4-controller.sh,