@@ -1,5 +1,9 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.415 2005/12/02 15:21:05 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.416 2005/12/02 16:32:32 rocket Exp $
+
+  02 Dec 2005; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  Fix autoresume for unpacking tarballs
 
   02 Dec 2005; Eric Edgar <rocket@gentoo.org>
   targets/support/livecdfs-update.sh:
